[package]
name = "image-resizer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-credential-types = "1.0"
image = "0.25"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.5"
